# gbemu

./: (.*)s*=(.*)  .gitignore  .travis.yml  ?  CMakeLists.txt  Makefile  README.md  adc.s  add_source.cmake  appveyor.yml  gbemu  log.txt  makefile  makefile.temp  mingw.mk  plot.py  process.py  rename.py  run.py  sites.txt  temp.py  toolchain.cmake
android-project/: AndroidManifest.xml  build.properties  build.xml  local.properties  run  sources.list
android-project/jni/: Android.mk  Application.mk
android-project/jni/src/: Android.mk  run.sh  source.list
android-project/res/values/: strings.xml
android-project/src/io/stuartjones/gbemu/: GBemu.java
cmake/: Makefile  add_source.cmake  cmake_install.cmake  coverage.cmake  definitions.cmake  macros.cmake  mingw-toolchain.cmake  mingw.cmake  options.cmake
data/: .~lock.opcodes.csv#  CMakeLists.txt  data.pyproj  gen_freq_table.py  gen_noise_table.py  gen_opcodes.py  make_array.c  opcodes.csv  opcodes_8bit.html  opcodes_prefix_cb.html~  process.py  process_instr.py  record_speed.py  roms
data/roms/: CMakeLists.txt  README.txt
gui/: CMakeLists.txt  dissassembly.h  emu_thread.h  frame.h  keys.h  main.cpp  pixel_display.h  register_window.h
src/: CMakeLists.txt  FindGBEmu.cmake  arg_defs.c  arg_defs.cpp  arg_defs.h  audio.c  audio.cpp  audio.h  boot_image.cpp  cmdline.c  cmdline.cpp  cmdline.h  common.c  common.cpp  common.h  controls_image.h  cpu.c  cpu.cpp  cpu.h  debug.c  debug.cpp  debug.h  display.c  display.cpp  display.h  embedded.h  embedded_font.h  events.c  events.cpp  events.h  gen_opcodes.py  instruction_strings.c  instruction_strings.h  logging.c  logging.h  main.c  main.cpp  memory.c  memory.cpp  memory.h  (+15 more)
src/back_end/: arg_defs.h  cpu.c  cpu.h  gen_opcodes.py  memory.c  memory.h  opcodes.c  prefix_cb_opcodes.c  rom.c  rom.h  types.h
src/back_end/instructions/: add.c  daa.c  ei.c  halt.c  inc.c  invalid.c  jr.c  push.c  res.c  sbc.c  set.c  swap.c
src/cpu/: cpu.c  cpu.cpp  cpu.h  gen_opcodes.py  memory.c  memory.h  opcodes.c  opcodes.g  opcodes.h  prefix_cb_opcodes.h  rom.c  rom.h
src/cpu/instructions/: adc.c  add.c  and.c  bit.c  call.c  ccf.cpp  cp.c  daa.c  dec.c  di.c  ei.c  ei.cpp  inc.c  inc.cpp  invalid.c  jp.c  jr.c  ld.c  ld.cpp  ldh.c  nop.c  nop.cpp  or.c  pop.c  prefix.c  prefix_cb.c  prefix_cb.cpp  push.c  ret.c  reti.c  reti.cpp  rla.c  rla.cpp  rlc.c  rlca.c  rr.c  rra.c  rrca.c  rrca.cpp  rst.c  (+8 more)
src/cpu/instructions/done/: dec.c  ldh.c  or.c  pop.c  push.c
src/cpu/instructions/prefix_cb/: bit.c  res.c  rl.c  rlc.c  rr.c  rrc.c  set.c  sla.c  sra.c  srl.c  swap.c  todo.txt
src/display/: display.cpp  display.h
src/front_end/: display.c  display.h  events.c  events.h
src/gui/: CMakeLists.txt  DownloadWxWidgets.cmake  dissassembly.h  frame.h  main.cpp  pixel_display.h  platform_wx.cpp  register_window.h
src/instructions/: adc.c  adc.cpp  add.c  add.cpp  and.c  and.cpp  bit.c  bit.cpp  call.c  call.cpp  ccf.c  ccf.cpp  cp.c  cp.cpp  cpl.c  cpl.cpp  daa.c  daa.cpp  dec.c  dec.cpp  di.c  di.cpp  ei.c  ei.cpp  halt.c  halt.cpp  inc.c  inc.cpp  invalid.c  invalid.cpp  jp.c  jp.cpp  jr.c  jr.cpp  ld.c  ld.cpp  ldh.c  ldh.cpp  nop.c  nop.cpp  (+50 more)
src/instructions/prefix_cb/: bit.cpp  res.cpp  rlc.cpp  rr.cpp  set.cpp  sra.cpp  swap.cpp
src/testing/: adc.c  adc.cpp  add.c  add.cpp  and.c  and.cpp  bit.c  bit.cpp  call.cpp  cmp.c  cmp.cpp  daa.c  daa.cpp  dec.c  dec.cpp  flag.c  flag.cpp  inc.c  inc.cpp  jp.c  jp.cpp  jr.c  jr.cpp  ldh.cpp  or.c  or.cpp  pop.c  pop.cpp  push.c  push.cpp  rc.c  ret.c  ret.cpp  rl.c  rl.cpp  rla.c  rla.cpp  rr.c  rr.cpp  rra.c  (+11 more)
tests/: CMakeLists.txt  inc.c  jp.c  pop.c  testing.h
tests/blaargg/: CMakeLists.txt  main.c
tests/instructions/: bit.c  call.c  rr.c  testing.c
utils/create_header/: CMakeLists.txt  create_header.c
